# tinygltf

./: CMakeLists.txt
cmake/: tinygltfConfig.cmake
include/: json.hpp  tiny_gltf.h
src/: tiny_gltf.cpp
